# PersonalFunProjects

./: README.md  travelling_ants.py
Five-in-a-row/: game5row.py
Five-in-a-row-cpp/: README.md  main.cpp
Tic-tac-toe/: p3_ttt.py  ttt.py
Travelling ants/: README.md
Travelling salesman problem/: plot_dat.py  pyproject.toml  tsp_main.py
nordnet/: dagensData.txt  getTodaysData.py  portfolioData.p  portfolioNordnet.py
