[tool.poetry]
name = "fun-tsp"
version = "1.0.0"
description = "for the lulz"
authors = ["Håkon V. Treider <haakonvt@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "<1.21"
numba = "^0.54.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
